算法题， 短 URL 系统